<resources>
    <string name="notification_name_low" translatable="false">服务通知</string>
    <string name="main_nav_title" translatable="false">自由、开放、平等、分享</string>
    <string name="main_nav_widgets" translatable="false">控件</string>
    <string name="main_nav_drawables" translatable="false">图形</string>
    <string name="main_nav_others" translatable="false">其他</string>
    <string name="main_nav_develop" translatable="false">开发</string>
    <string name="main_nav_report" translatable="false">报告错误</string>
    <string name="main_nav_contact" translatable="false">联系作者</string>
    <string name="main_nav_about" translatable="false">关于</string>
    <string name="about_label" translatable="false">关于</string>
    <string name="about_info" translatable="false">ProjectX为个人开源控件合集，旨在辅助开发、维护、更新个人所有开源控件，同时也可以用于展示所有开源控件的功能及属性。（部分不便于展示的内容则不会出现在应用中，如开发中的不稳定控件等。）</string>
    <string name="about_more" translatable="false">更多信息，请参考Github项目主页：</string>
    <string name="about_privacy" translatable="false">隐私权政策</string>
    <string name="main_widgets_gradienttabstrip" translatable="false">渐变底部栏</string>
    <string name="main_widgets_tagtabstrip" translatable="false">图片标记栏</string>
    <string name="main_widgets_indicatortabstrip" translatable="false">游标顶部栏</string>
    <string name="main_widgets_shapeimageview" translatable="false">裁剪图片视图</string>
    <string name="main_widgets_statelayout" translatable="false">状态布局</string>
    <string name="main_widgets_wraplayout" translatable="false">自换行布局</string>
    <string name="main_widgets_drawableratingbar" translatable="false">图片评级</string>
    <string name="main_widgets_headerfootergridview" translatable="false">头尾网格视图</string>
    <string name="main_widgets_multiactiontextview" translatable="false">文本点击</string>
    <string name="main_widgets_recyclepager" translatable="false">回收页视图</string>
    <string name="main_widgets_circleprogressbar" translatable="false">环形进度条</string>
    <string name="main_widgets_zxingscanview" translatable="false">条码扫描</string>
    <string name="main_widgets_smoothinputlayout" translatable="false">输入面板</string>
    <string name="main_widgets_multifunctionalrecyclerview" translatable="false">多功能回收视图</string>
    <string name="main_drawables_loading" translatable="false">载入图片</string>
    <string name="main_drawables_cornerdrawable" translatable="false">尖角框</string>
    <string name="main_drawables_frame" translatable="false">帧图片</string>
    <string name="main_drawables_linedrawable" translatable="false">横线图片</string>
    <string name="main_drawables_griddrawable" translatable="false">网格图片</string>
    <string name="main_drawables_textdrawable" translatable="false">文本图片</string>
    <string name="main_others_printer" translatable="false">小票打印</string>
    <string name="main_others_crypto" translatable="false">加密解密</string>
    <string name="main_others_ftp" translatable="false">文件传输</string>
    <string name="main_others_font" translatable="false">字体</string>
    <string name="main_others_opentype" translatable="false">字体文件</string>
    <string name="main_others_floating" translatable="false">悬浮菜单</string>
    <string name="main_develop_developing" translatable="false">开发中</string>
    <string name="main_develop_supergridview" translatable="false">拖拽网格</string>
    <string name="main_others_clipboard" translatable="false">剪切板</string>
    <string name="main_others_retrofit" translatable="false">Retrofit辅助</string>
    <string name="developing_label" translatable="false">开发中</string>
    <string name="gts_label" translatable="false">渐变底部栏</string>
    <string name="tts_label" translatable="false">图片标记栏</string>
    <string name="its_label" translatable="false">游标顶部栏</string>
    <string name="miv_label" translatable="false">裁剪图片视图</string>
    <string name="miv_crop_type" translatable="false">裁剪为圆形：</string>
    <string name="miv_height_width_scale" translatable="false">宽高比(100/100~100/50)：</string>
    <string name="miv_border_width" translatable="false">边线宽(0dp~10dp)：</string>
    <string name="miv_radius" translatable="false">圆角(0dp~30dp)：</string>
    <string name="miv_padding" translatable="false">Padding(0dp~20dp)：</string>
    <string name="miv_scaletype" translatable="false">ScaleType：</string>
    <string name="sl_label" translatable="false">状态布局</string>
    <string name="sl_change_state" translatable="false">状态修改：</string>
    <string name="sl_change_state_normal" translatable="false">普通</string>
    <string name="sl_change_state_loading" translatable="false">载入</string>
    <string name="sl_change_state_error" translatable="false">错误</string>
    <string name="sl_change_state_empty" translatable="false">空白</string>
    <string name="sl_change_mode" translatable="false">模式修改：</string>
    <string name="sl_change_mode_drawable" translatable="false">图片</string>
    <string name="sl_change_mode_view" translatable="false">视图</string>
    <string name="wl_label" translatable="false">自换行布局</string>
    <string name="wl_text" translatable="false">文本框</string>
    <string name="wl_text_gravity" translatable="false">布局：</string>
    <string name="wl_gravity_top" translatable="false">上</string>
    <string name="wl_gravity_center" translatable="false">中</string>
    <string name="wl_gravity_bottom" translatable="false">下</string>
    <string name="wl_text_horizontal" translatable="false">水平间距（0dp～30dp）：</string>
    <string name="wl_text_vertical" translatable="false">垂直间距（0dp～30dp）：</string>
    <string name="drb_label" translatable="false">图片评级</string>
    <string name="drb_gravity" translatable="false">布局：</string>
    <string name="drb_manually" translatable="false">可手动控制：</string>
    <string name="drb_only_item_touchable" translatable="false">仅子项内部响应触摸事件：</string>
    <string name="drb_max" translatable="false">最大值(6~10)：</string>
    <string name="drb_min" translatable="false">子项不得少于个数(0~6)：</string>
    <string name="hfg_label" translatable="false">头尾网格视图</string>
    <string name="hfg_header_view" translatable="false">头View</string>
    <string name="hfg_header_item" translatable="false">头Item</string>
    <string name="hfg_footer_view" translatable="false">尾View</string>
    <string name="hfg_footer_item" translatable="false">尾Item</string>
    <string name="hfg_item_number" translatable="false">子项数目：</string>
    <string name="hfg_item" translatable="false">Item %1$d</string>
    <string name="hfg_header" translatable="false">Header %1$d</string>
    <string name="hfg_footer" translatable="false">Footer %1$d</string>
    <string name="hfg_hv" translatable="false">Header View %1$d</string>
    <string name="hfg_fv" translatable="false">Footer View %1$d</string>
    <string name="mat_label" translatable="false">文本点击</string>
    <string name="mat_content" translatable="false">Android最初由安迪·鲁宾（Andy Rubin）等人开发制作，最初开发这个系统的目的是创建一个数码相机的先进操作系统；但是后来发现市场需求不够大，加上智能手机市场快速成长，于是Android被改造为一款面向智能手机的操作系统。于2005年7月11日被美国科技企业Google收购。2007年11月，Google与84家硬件制造商、软件开发商及电信营运商成立开放手持设备联盟来共同研发改良Android，随后，Google以Apache免费开放源代码许可证的授权方式，发布了Android的源代码，让生产商推出搭载Android的智能手机，Android后来更逐渐拓展到平板电脑及其他领域上。\n2010年末数据显示，仅正式推出两年的Android操作系统在市场占有率上已经超越称霸逾十年的诺基亚Symbian系统，成为全球第一大智能手机操作系统。\n在2014年Google I/O开发者大会上Google宣布过去30天里有10亿台活跃的安卓设备，相较于2013年6月则是5.38亿。</string>
    <string name="mat_toast" translatable="false">点击整个文本</string>
    <string name="rp_label" translatable="false">回收页视图</string>
    <string name="rp_title_page" translatable="false">页面数目</string>
    <string name="rp_title_offset" translatable="false">计数偏移</string>
    <string name="rp_add_exchange" translatable="false">奇偶互换</string>
    <string name="cpb_label" translatable="false">环形进度条</string>
    <string name="cpb_bar_top" translatable="false">速度</string>
    <string name="cpb_bar_bottom" translatable="false">km/s</string>
    <string name="cpb_bar_loading" translatable="false">载入</string>
    <string name="cpb_gravity" translatable="false">布局：</string>
    <string name="cpb_radius" translatable="false">进度条半径：（100dp～200dp）</string>
    <string name="cpb_start_angle" translatable="false">进度起始角度：</string>
    <string name="cpb_sweep_angle" translatable="false">进度扫描角度：</string>
    <string name="cpb_background_size" translatable="false">背景尺寸大小：（0dp～30dp）</string>
    <string name="cpb_progress_size" translatable="false">进度尺寸大小：（0dp～30dp）</string>
    <string name="cpb_progress_progress" translatable="false">进度值：(0～810)</string>
    <string name="cpb_gradient" translatable="false">进度渐变色：</string>
    <string name="cpb_visibility" translatable="false">进度刻度可见状态：</string>
    <string name="cpb_dial_gap" translatable="false">刻度表盘间距：（0dp～10dp）</string>
    <string name="cpb_dial_angle" translatable="false">刻度角度：(0～10)</string>
    <string name="cpb_dial_height" translatable="false">刻度高度：(0dp～20dp)</string>
    <string name="cpb_dial_width" translatable="false">刻度宽度：(0dp～5dp)</string>
    <string name="cpb_dial_special_unit" translatable="false">特殊刻度单位：(0～10)</string>
    <string name="cpb_dial_special_height" translatable="false">特殊刻度高度：(0dp～20dp)</string>
    <string name="cpb_dial_special_width" translatable="false">特殊刻度宽度：(0dp～5dp)</string>
    <string name="cpb_dial_gravity" translatable="false">刻度布局：</string>
    <string name="cpb_special_dial_value" translatable="false">显示特殊刻度值：</string>
    <string name="cpb_special_dial_value_gap" translatable="false">特殊刻度值与特殊刻度间距：（0dp～10dp）</string>
    <string name="cpb_special_dial_value_text_size" translatable="false">特殊刻度值文字大小：（5sp～15sp）</string>
    <string name="cpb_progress_value" translatable="false">显示进度值：</string>
    <string name="cpb_progress_value_text_size" translatable="false">进度值文字大小：（5sp～15sp）</string>
    <string name="cpb_top_text_gap" translatable="false">顶部文字与进度值间距：（0dp～50dp）</string>
    <string name="cpb_top_text_size" translatable="false">顶部文字大小：（10sp～40sp）</string>
    <string name="cpb_bottom_text_gap" translatable="false">底部文字与进度值间距：（0dp～50dp）</string>
    <string name="cpb_bottom_text_size" translatable="false">底部文字大小：（10sp～40sp）</string>
    <string name="cpb_scale_type" translatable="false">缩放模式：</string>
    <string name="cpb_progress_duration" translatable="false">进度动画时长：（100～5000）</string>
    <string name="cpb_progress_mode" translatable="false">载入模式开关：</string>
    <string name="cpb_loading_start_angle" translatable="false">载入起始角度：</string>
    <string name="printer_ip" translatable="false">填写IP信息</string>
    <string name="printer_ip_hint" translatable="false">IP地址</string>
    <string name="printer_port_hint" translatable="false">端口</string>
    <string name="printer_port_text" translatable="false">9100</string>
    <string name="printer_cancel" translatable="false">取消</string>
    <string name="printer_test_start" translatable="false">开始执行打印&#8230;</string>
    <string name="printer_state" translatable="false">打印机状态</string>
    <string name="printer_print" translatable="false">打印</string>
    <string name="crypto_label" translatable="false">加密解密</string>
    <string name="crypto_input" translatable="false">输入待处理文本</string>
    <string name="crypto_message_digest" translatable="false">信息摘要</string>
    <string name="crypto_des" translatable="false">DES</string>
    <string name="crypto_aes" translatable="false">AES</string>
    <string name="crypto_rsa" translatable="false">RSA</string>
    <string name="crypto_output" translatable="false">输出信息：</string>
    <string name="ftp_label" translatable="false">文件传输</string>
    <string name="ftp_port" translatable="false">2020</string>
    <string name="ftp_open" translatable="false">打开</string>
    <string name="ftp_close" translatable="false">关闭</string>
    <string name="mrv_menu_mode_vertical_continuity" translatable="false">垂直连续</string>
    <string name="mrv_menu_mode_vertical_singular" translatable="false">垂直单页</string>
    <string name="mrv_menu_mode_horizontal_continuity" translatable="false">水平连续</string>
    <string name="mrv_menu_mode_horizontal_singular" translatable="false">水平单页</string>
</resources>