<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="240dp"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        style="?android:attr/windowTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingTop="18dp"
        android:singleLine="true"
        android:text="@string/printer_ip"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/printer_edt_ip"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="?attr/dialogPreferredPadding"
        android:layout_marginRight="?attr/dialogPreferredPadding"
        android:digits="0123456789."
        android:hint="@string/printer_ip_hint"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="15" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/printer_edt_port"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="?attr/dialogPreferredPadding"
        android:layout_marginRight="?attr/dialogPreferredPadding"
        android:hint="@string/printer_port_hint"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="5"
        android:text="@string/printer_port_text" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/printer_btn_test_print"
        style="?attr/buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/printer_print" />

</LinearLayout>