<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="?android:attr/windowTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingTop="18dp"
        android:singleLine="true"
        android:text="@string/printer_state"
        android:textSize="18sp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/dps_sv_content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dps_tv_state"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_test_start"
            android:textColor="@color/colorAccent" />

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dps_btn_negative"
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printer_print" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dps_btn_positive"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printer_cancel" />

    </LinearLayout>
</LinearLayout>